fix: исправлена работа с сервером статистики