@@ -1,6 +1,5 @@
 package ru.practicum.evmsevice.client;
 
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.client.RestTemplateBuilder;
@@ -17,17 +16,11 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 
-// class StatsDtoListTypeToken extends TypeToken<List<StatsDto>> {
-// }
-
 @Component
 public class StatsClient extends BaseClient {
     private static final String PREFIX_HIT = "/hit";
     private static final String PREFIX_STATS = "/stats";
-    private static final String PREFIX_EVETS = "/events/";
-    // private static Gson gson = new GsonBuilder()
-    //        .setPrettyPrinting()
-    //       .create();
+    private static final String PREFIX_EVENTS = "/events/";
 
     @Autowired
     public StatsClient(@Value("${statserver.url}") String serverUrl, RestTemplateBuilder builder) {
@@ -47,34 +40,32 @@ public class StatsClient extends BaseClient {
         return makeAndSendRequest(HttpMethod.GET, PREFIX_STATS, parameters, null);
     }
 
-    public void hitInfo(String appName, HttpServletRequest request) {
+    public void hitInfo(String appName, String uri, String ip) {
         HitDto hitDto = new HitDto();
         hitDto.setApp(appName);
-        hitDto.setUri(request.getRequestURI());
-        hitDto.setIp(request.getRemoteAddr());
+        hitDto.setUri(uri);
+        hitDto.setIp(ip);
         hitDto.setTimestamp(LocalDateTime.now());
         post(hitDto);
     }
 
-
     public Integer getEventViews(Integer eventId, Boolean unique) {
-        Map<String, Object> parameters = Map.of("uris", PREFIX_EVETS + eventId,
+        Map<String, Object> parameters = Map.of("uris", PREFIX_EVENTS + eventId,
                 "unique", unique);
         List<StatsDto> dtos = getStatsList(PREFIX_STATS, parameters);
         if (dtos.isEmpty()) {
             return 0;
         }
-        return dtos.get(0).getHits();
+        return dtos.getFirst().getHits();
     }
 
     public List<StatsDto> getEventViewsByUris(List<String> eventUris, Boolean unique) {
-        StringBuilder urisBuilder = new StringBuilder(eventUris.get(0));
+        StringBuilder urisBuilder = new StringBuilder(eventUris.getFirst());
         for (int i = 1; i < eventUris.size(); i++) {
             urisBuilder.append(",").append(eventUris.get(i));
         }
         Map<String, Object> parameters = Map.of("uris", urisBuilder.toString(),
                 "unique", unique);
-        List<StatsDto> dtos = getStatsList(PREFIX_STATS, parameters);
-        return dtos;
+        return getStatsList(PREFIX_STATS, parameters);
     }
 }
